[tool.poetry]
name = "ozon_seller_api"
version = "0.1.0"
description = "Client for Ozon Seller HTTP API"
authors = [
    "pypchuk <opengl32.dll.tar.gz@gmail.com>",
]

[tool.poetry.dependencies]
python = "^3.11"
adaptix = "^3.0.0a4"
aiohttp = "^3.8.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.270"
mypy = "^1.3.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
